--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "socket.io-client": "^4.8.1",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
