--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "next-auth": "^4.24.10",
     "prisma": "^5.21.1",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-use": "^17.5.1",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.0"
   },
