--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.21.1",
     "@react-google-maps/api": "^2.20.3",
+    "@stripe/react-stripe-js": "^2.9.0",
+    "@stripe/stripe-js": "^4.10.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "next": "^14.2.16",
@@ -25,6 +27,7 @@
     "react-icons": "^5.3.0",
     "react-use": "^17.5.1",
     "socket.io-client": "^4.8.1",
+    "stripe": "^17.3.1",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
