--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@stripe/stripe-js": "^4.10.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "google-map-react": "^2.2.1",
     "next": "^14.2.16",
     "next-auth": "^4.24.10",
     "prisma": "^5.21.1",
@@ -28,7 +29,7 @@
     "react-use": "^17.5.1",
     "socket.io-client": "^4.8.1",
     "stripe": "^17.3.1",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
